@@ -1,14 +1,15 @@
 package com.edcm.backend.infrastructure.github;
 
-import com.edcm.backend.core.mappers.CommodityMapper;
+import com.edcm.backend.core.mappers.commodity.CommodityMapper;
 import com.edcm.backend.core.shared.data.CommodityDto;
+import com.edcm.backend.core.shared.data.EconomyDto;
 import com.edcm.backend.core.tools.GithubDataProvider;
-import com.edcm.backend.infrastructure.domain.github.GithubCommodityItemWithEddn;
 import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+@Service
 @RequiredArgsConstructor
 public class DefaultGithubDataProvider implements GithubDataProvider {
     private final GithubOperations githubOperations;
@@ -16,16 +17,24 @@ public class DefaultGithubDataProvider implements GithubDataProvider {
 
     @Override
     public List<CommodityDto> getCommodities() {
-        return githubOperations.getCommodities()
-            .getItems()
-            .entrySet()
-            .stream()
-            .map(item -> new GithubCommodityItemWithEddn(
-                item.getValue().getId(),
-                item.getValue().getCategory(),
-                item.getValue().getName(),
-                item.getKey()))
-            .map(mapper::githubItemToCommodityDto)
-            .collect(Collectors.toList());
+        var commodities = githubOperations.getRegularCommodities().getItems();
+        var rareCommodities = githubOperations.getRareCommodities().getItems();
+
+        commodities.addAll(rareCommodities);
+
+        return commodities.stream()
+                          .peek(item -> item.setSymbol(item.getSymbol().toLowerCase()))
+                          .map(mapper::githubItemToCommodityDto)
+                          .toList();
+
+    }
+
+    @Override
+    public List<EconomyDto> getEconomies() {
+        return githubOperations.getEconomies()
+                .getGithubEconomyItems()
+                .stream()
+                .map(item -> new EconomyDto(null, item.getId(), item.getName()))
+                .toList();
     }
 }
